--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,8 @@ main {
 nav {
     background-color: beige;
     padding: 10px;
+    width: 100%;
+
 }
 
 nav ul {
@@ -65,6 +67,7 @@ nav a:hover {
 
 .service {
     display: inline-block;
+    text-align: center;
     background-color: white;
     border: 5px solid green;
     border-radius: 5px;
